[gd_scene load_steps=5 format=3 uid="uid://dmx0kqafex382"]

[ext_resource type="Script" path="res://addons/PlanetEditor/subeditors/vector3_input.gd" id="1_ph8ub"]
[ext_resource type="PackedScene" uid="uid://dt2p0v584t236" path="res://addons/PlanetEditor/subeditors/float_input.tscn" id="2_n5qa0"]
[ext_resource type="Texture2D" uid="uid://cvr2b07upscib" path="res://addons/PlanetEditor/assets/unlocked.png" id="3_xa3ss"]
[ext_resource type="Texture2D" uid="uid://cfoh2ge3xttrp" path="res://addons/PlanetEditor/assets/locked.png" id="4_23mnl"]

[node name="Vector3Input" type="HBoxContainer"]
script = ExtResource("1_ph8ub")
is_aspect_editable = true

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 14
vertical_alignment = 1

[node name="X" parent="." instance=ExtResource("2_n5qa0")]
layout_mode = 2
label = "x:"

[node name="Y" parent="." instance=ExtResource("2_n5qa0")]
layout_mode = 2
label = "y:"

[node name="Z" parent="." instance=ExtResource("2_n5qa0")]
layout_mode = 2
label = "z:"

[node name="IsAspect" type="TextureButton" parent="."]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("3_xa3ss")
texture_pressed = ExtResource("4_23mnl")
ignore_texture_size = true
stretch_mode = 5

[connection signal="value_changed" from="X" to="." method="_on_x_value_changed"]
[connection signal="value_changed" from="Y" to="." method="_on_y_value_changed"]
[connection signal="value_changed" from="Z" to="." method="_on_z_value_changed"]
[connection signal="toggled" from="IsAspect" to="." method="_on_is_aspect_toggled"]
